--- a/src/main/webapp/css/declare.css
+++ b/src/main/webapp/css/declare.css
@@ -19,32 +19,50 @@ body {
 	padding-top: 40px;
 }
 
-.btn1{
+.btn1 {
 	border-radius: 3px;
 	background-color: #F77E39;
-	padding: 2px 10px 2px 10px;
+	padding: 2px 10px 4px 10px;
+	font-size: 14px;
 }
-.btn2{
+
+.btn2 {
 	border-radius: 15px;
-	background-color: #06938E;
-	color: #fff;
-	padding: 2px 10px 2px 10px;
+	background-color: #cbcbcb;
+	color: #fff !important;
+	padding: 2px 10px 4px 10px;
+	font-size: 14px;
 }
-a{
-text-decoration: none;
-color: #ffffff;	
+
+.pdl10 {
+	padding-left: 10px;
 }
+
+.pdl30 {
+	padding-left: 30px;
+}
+
+a {
+	text-decoration: none;
+	color: #ffffff;
+}
+
 
 /*  content */
 
 .contop {
 	padding: 20px 10px;
 }
-.contop span{
+
+.contop span {
 	padding-left: 10px;
 	padding-right: 10px;
-	
 }
+
+.bd1 {
+	border: solid 1px #dcdcdb;
+}
+
 .xmenu {
 	color: #c19d30;
 	font-size: 22px;
@@ -63,44 +81,123 @@ color: #ffffff;
 	width: 200px;
 	border: solid 1px #dcdcdb;
 	font-size: 14px;
+	border-right: 0px;
 }
 
 .lmenu li {
 	list-style: none;
 	text-align: left;
+	padding: 0px 10px;
 	border: solid 1px #dcdcdb;
-	padding: 10px 10px 10px 10px;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+background-color: #ededed;
 }
-
+.cwhite{
+	background-color: #fff;
+}
+.mne{
+	
+	border-right: solid 1px #dcdcdb;
+}
+.bwr{
+	position: relative;
+	width:2px;
+	height:28px;
+	background-color: #068f8a;
+	top:0px;
+	left:11px;
+}
 .bgy {
-	padding-left: 28px;
+	padding-left: 38px;
 	height: 27px;
 	background-image: url(../img/micon.png);
 	background-repeat: no-repeat;
 }
+
 .bgi {
-	padding-left: 28px;
+	padding-left: 38px;
 	height: 27px;
 	background-image: url(../img/miion.png);
 	background-repeat: no-repeat;
 }
+
 .conrightt1 {
 	border: solid 1px #dcdcdb;
 	height: 20px;
-	padding-left: 10px;
+	padding: 10px;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+}
+
+.conrightt1 a {
+	color: #7f7f7f;
+	margin: 2px 10px;
 }
 
 .conrightt2 {
-	border: solid 1px #dcdcdb;
+	padding: 10px;
 }
 
-table tr td {
+.conrightt2 span {
+	color: #7d7d7c;
+}
+
+.avenum {
+	color: #06938E !important;
+	font-weight: bold;
+	padding: 2px 30px 2px 10px;
+}
+
+.avenun {
+	color: #ee5a2f !important;
+	font-weight: bold;
+	padding: 2px 30px 2px 10px;
+}
+
+.avenuo {
+	color: #26b229 !important;
+	font-weight: bold;
+	padding: 2px 30px 2px 10px;
+}
+
+table {
 	margin: 0;
 	padding: 0;
+	border: 1px solid #dcdcdb;
+	border-right: 1px solid #dcdcdb;
+	border-bottom: 1px solid #dcdcdb;
+	border-left: 0px;
+}
+
+th {
+	height: 40px;
+	border-left: 1px solid #dcdcdb;
+	background-color: #ebebeb;
+}
+.bgh{
+	background-color: #ebebeb;
+}
+tr {
+	height: 30px;
+}
+
+td {
+	border-left: 1px solid #dcdcdb;
+	border-top: 1px solid #dcdcdb;
 }
 
 .cchart {
 	height: 200px;
-	width: 900px;
+	width: 966px;
 	border: solid 1px #dcdcdb;
+	margin: 10px;
+}
+.bz{
+	border-top: 1px solid #dcdcdb;
+	font-size: 12px;
+	text-align: left;
+	padding: 20px;
 }
