--- a/src/main/webapp/css/declare.css
+++ b/src/main/webapp/css/declare.css
@@ -34,12 +34,24 @@ body {
 	font-size: 14px;
 }
 
+.btn3 {
+	border-radius: 5px;
+	background-color: #C19D30;
+	color: #fff !important;
+	padding: 2px 10px 2px 10px;
+	font-size: 12px;
+}
+
 .pdl10 {
 	padding-left: 10px;
 }
 
 .pdl30 {
 	padding-left: 30px;
+}
+
+.pdt20 {
+	padding-top: 20px;
 }
 
 a {
@@ -82,33 +94,37 @@ a {
 	border: solid 1px #dcdcdb;
 	font-size: 14px;
 	border-right: 0px;
+	padding-bottom: 50px;
 }
 
 .lmenu li {
 	list-style: none;
 	text-align: left;
-	padding: 0px 10px;
+	padding: 10px 0px 10px 10px;
 	border: solid 1px #dcdcdb;
 	border-top: 0px;
 	border-left: 0px;
 	border-right: 0px;
-background-color: #ededed;
+	background-color: #ededed;
 }
-.cwhite{
+
+.cwhite {
 	background-color: #fff;
 }
-.mne{
-	
+
+.mne {
 	border-right: solid 1px #dcdcdb;
 }
-.bwr{
+
+.bwr {
 	position: relative;
-	width:2px;
-	height:28px;
+	width: 6px;
+	height: 28px;
 	background-color: #068f8a;
-	top:0px;
-	left:11px;
+	top: 0px;
+	left: 1px;
 }
+
 .bgy {
 	padding-left: 38px;
 	height: 27px;
@@ -177,9 +193,15 @@ th {
 	border-left: 1px solid #dcdcdb;
 	background-color: #ebebeb;
 }
-.bgh{
+table input{
+	width:54px;
+	border: 0px;
+    background-color: rgba(235,235,235,0);
+}
+.bgh {
 	background-color: #ebebeb;
 }
+
 tr {
 	height: 30px;
 }
@@ -195,9 +217,55 @@ td {
 	border: solid 1px #dcdcdb;
 	margin: 10px;
 }
-.bz{
+
+.bz {
 	border-top: 1px solid #dcdcdb;
 	font-size: 12px;
 	text-align: left;
 	padding: 20px;
+}
+
+.posty {
+	margin-left: 60px;
+	border-radius: 20px;
+	border: 1px solid #068F8A;
+	padding: 5px;
+	color: #C19D30;
+	font-weight: bold;
+}
+
+.ustb {
+	padding: 10px;
+}
+
+.usyes {
+	width: 570px;
+	float: left;
+	text-align: left;
+	padding-bottom: 10px;
+	padding-left: 10px;
+}
+
+.usno {
+	width: 570px;
+	float: left;
+	text-align: left;
+	padding-left: 20px;
+	padding-bottom: 10px;
+}
+
+.btn4 {
+	border-radius: 15px;
+	background-color: #F77E39;
+	color: #fff !important;
+	padding: 0px 10px;
+	font-size: 12px;
+}
+
+.btn5 {
+	border-radius: 15px;
+	background-color: #dcdcdb;
+	color: #068F81 !important;
+	padding: 0px 10px;
+	font-size: 12px;
 }
