--- a/src/main/webapp/css/declare.css
+++ b/src/main/webapp/css/declare.css
@@ -6,6 +6,33 @@ body {
 	padding: 0;
 }
 
+#tk{
+	display:none;
+}
+.bcon{
+	width:400px;
+	background-color: #FFFFFF;
+	z-index: 1000;
+	position: fixed;
+	top: 100px;
+	left:100px;
+	font-size: 14px;
+	padding: 10px 10px 40px 40px;
+	border-radius: 5px;
+}
+
+.blbg {
+	z-index: 999;
+	position: fixed;
+	width: 1840px;
+	height: 1000px;
+	background-color: rgba(0, 0, 0, .7);
+	left: 0px;
+	top: 0px;
+}
+.bgw{
+		background-color: #ededed;
+}
 .rl {
 	float: right;
 }
@@ -25,7 +52,12 @@ body {
 	padding: 2px 10px 4px 10px;
 	font-size: 14px;
 }
-
+.btnh1 {
+	border-radius: 3px;
+	background-color: #cbcbcb;
+	padding: 2px 10px 4px 10px;
+	font-size: 14px;
+}
 .btn2 {
 	border-radius: 15px;
 	background-color: #cbcbcb;
@@ -33,7 +65,13 @@ body {
 	padding: 2px 10px 4px 10px;
 	font-size: 14px;
 }
-
+.btnh2 {
+	border-radius: 15px;
+	background-color: #06938e;
+	color: #fff !important;
+	padding: 2px 10px 4px 10px;
+	font-size: 14px;
+}
 .btn3 {
 	border-radius: 5px;
 	background-color: #C19D30;
@@ -49,7 +87,9 @@ body {
 .pdl30 {
 	padding-left: 30px;
 }
-
+.pdr20{
+	padding-right: 20px;
+}
 .pdt20 {
 	padding-top: 20px;
 }
@@ -105,7 +145,7 @@ a {
 	border-top: 0px;
 	border-left: 0px;
 	border-right: 0px;
-	background-color: #ededed;
+
 }
 
 .cwhite {
@@ -114,8 +154,11 @@ a {
 
 .mne {
 	border-right: solid 1px #dcdcdb;
+	float: left;
 }
-
+.mnea{
+	color: #d1b664 !important;
+}
 .bwr {
 	position: relative;
 	width: 6px;
@@ -193,13 +236,19 @@ th {
 	border-left: 1px solid #dcdcdb;
 	background-color: #ebebeb;
 }
-table input{
-	width:54px;
+
+table input {
+	width: 54px;
 	border: 0px;
-    background-color: rgba(235,235,235,0);
+	background-color: rgba(235, 235, 235, 0);
 }
+
 .bgh {
 	background-color: #ebebeb;
+}
+.bghh {
+	background-color: #06938e;
+	color: #fff;
 }
 
 tr {
@@ -224,7 +273,12 @@ td {
 	text-align: left;
 	padding: 20px;
 }
-
+.bz textarea{
+	font-size:14px;
+	width: 940px;
+	border: 0px;
+	color: #C19D30;
+}
 .posty {
 	margin-left: 60px;
 	border-radius: 20px;
