--- a/src/main/webapp/css/declare.css
+++ b/src/main/webapp/css/declare.css
@@ -247,8 +247,8 @@ table input {
 	background-color: #ebebeb;
 }
 .bghh {
-	background-color: #06938e;
-	color: #fff;
+	background-color: #e5e5e5;
+	
 }
 
 tr {
@@ -278,6 +278,7 @@ td {
 	width: 940px;
 	border: 0px;
 	color: #C19D30;
+overflow-y:visible;
 }
 .posty {
 	margin-left: 60px;
