--- a/src/main/webapp/css/declare.css
+++ b/src/main/webapp/css/declare.css
@@ -7,15 +7,17 @@ body {
 }
 
 #tk{
-	display:none;
+	display:block;
+	
 }
 .bcon{
+	position:fixed;
+top:50%;
+left:50%;
+margin:-150px 0 0 -225px;
 	width:400px;
 	background-color: #FFFFFF;
 	z-index: 1000;
-	position: fixed;
-	top: 100px;
-	left:100px;
 	font-size: 14px;
 	padding: 10px 10px 40px 40px;
 	border-radius: 5px;
@@ -105,7 +107,10 @@ a {
 .contop {
 	padding: 20px 10px;
 }
-
+.cgr{
+	color: #068F81;
+	font-weight: bold;
+}
 .contop span {
 	padding-left: 10px;
 	padding-right: 10px;
@@ -238,6 +243,7 @@ th {
 	height: 40px;
 	border-left: 1px solid #dcdcdb;
 	background-color: #ebebeb;
+	color:#068F81;
 }
 
 table input {
@@ -329,8 +335,65 @@ overflow-y:visible;
 }
 
 .regi{
-margin:0 auto;
+margin: auto;
 width:880px;
 height:auto;
+padding-top: 80px;
+}
+.regbtn{
+	background-color: #f77e39;
+}
+.wid600{
+	padding:32px 145px 0 146px;
+}
+.pd16{
+	padding: 6px;
+}
+.pdds{
+	padding: 6px 0px 0px 298px;
+}
+.pdl15{
+	padding:6px 6px 0px 13px;
+}
+.login{
+	color: #06938e;
+	font-size: 14px;
+}
+.login p{
+	padding-left: 20px;
+	width:240px;
+}
+.login input{
+	border: #06938E 1px solid;
+	width:100px;
+	color: #06938e;
+}
+.wid40{
+	padding: 0px 30px;
+}
+.wid60{
+	padding: 0px 36px 0px 30px;
 }
 
+.wid100{
+	padding: 0px 10px 0px 114px;
+}
+/**/
+.rest{
+	margin: auto;
+	width: 400px;
+    margin-top: 80px;
+	color: #06938e;
+	font-weight: bold;
+}
+.res{
+	margin: auto;
+    margin-top: 10px;
+	width: 400px;
+	height:400px;
+	border: solid #068F8A 1px;
+	color: #06938e;
+}
+.pdt100{
+	padding: 100px 20px 0 300px;
+}
