--- a/src/main/webapp/css/line.css
+++ b/src/main/webapp/css/line.css
@@ -9,13 +9,17 @@ body {
 #tk{
 	display:none;
 }
+#tk_line{
+	display:none;
+}
 .bcon{
+	position:fixed;
+	top:50%;
+	left:50%;
+	margin:-150px 0 0 -225px;
 	width:400px;
 	background-color: #FFFFFF;
 	z-index: 1000;
-	position: fixed;
-	top: 100px;
-	left:100px;
 	font-size: 14px;
 	padding: 10px 10px 40px 40px;
 	border-radius: 5px;
